--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Wellness Decoded: A Guide to Holistic Health | LevitraB.store</title>
     <meta name="description" content="An informational portal on men's health, lifestyle choices, and understanding treatments. We do not sell medication.">
+    <meta name="google-site-verification" content="CCWKvqXkMXU5ykPyrkIjPlwHX2o5ZQDTTxordrp0RLs" />
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -87,4 +88,5 @@
     </footer>
 
 </body>
+
 </html>
